flex fix
pdf links too far apart

--- a/style.css
+++ b/style.css
@@ -77,16 +77,18 @@ a:hover {
 	display: flex;
 	flex-wrap: wrap;
 	align-items: flex-start;
-	justify-content: space-around;
+	justify-content: flex-start;
 	margin-top: 20px;
 }
 
 .label{
-  margin: 0px 0px 0px 0px;
+  margin: 0px 0px 0px 10px;
   padding: 14px 0px;
   text-align: center;
   display: inline-block;
 }
+
+
 
 .label p{
     margin: 0px 0px 0px 0px;
@@ -98,7 +100,7 @@ a:hover {
 }
 
 .button {
-  margin: 0px 0px 0px 0px;
+  margin: 0px 0px 10px 10px;
   background-color: #FFDD53;
   border: none;
   padding: 15px 32px;
@@ -129,6 +131,15 @@ a:hover {
 	-webkit-transition: background-color 300ms ease;
     -ms-transition: background-color 300ms ease;
     transition: background-color 300ms ease;
+}
+
+.contactflexxx{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  margin-top: 20px;
+  justify-content: space-between;
 }
 
 .contact a h1{
